--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,34 @@ body,
 html {
   height: 100%;
 }
+
+/*legend*/
+.legend {
+  border: 1px solid rgb(71, 71, 71);
+  font-family: Verdana, sans-serif;
+  font-weight: bold;
+  color: rgb(7, 7, 7);
+  text-align: left;
+  font-size: 14px;
+  width: 150px;
+  height: 150px;
+  line-height: 16px;
+  background: rgb(6, 158, 150);
+  opacity: 1;
+}
+
+.legend i {
+  width: 15px;
+  height: 15px;
+  float: left;
+  margin-right: 8px;
+  margin-left: 8px;
+  opacity: 1.0;
+}
+
+.legend .square2 {
+  border-radius: 50%;
+  width: 50px;
+  height: 10px;
+  margin-top: 0px;
+}
